<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_booking_barang"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_light_white"
    tools:context="io.sezon.sezon.mElectronic.BookingBarangActivity">

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:background="@color/greyText"/>

        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:src="@drawable/ic_arrow_back_grey"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/mBarang_title"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/food_booking"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/material_blue_grey_50"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="8dp"
                    android:text="@string/food_itemsToOrder"
                    android:textColor="@color/greyText"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/material_blue_grey_200" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/barang_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/material_blue_grey_50">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="8dp"
                    android:text="@string/food_deliver"
                    android:textColor="@color/greyText"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/material_blue_grey_200" />

            <LinearLayout
                android:id="@+id/booking_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_location_pilih_merah"
                    android:scaleType="fitCenter" />

                <TextView
                    android:id="@+id/barang_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/food_destination"
                    android:textSize="16sp"
                    android:drawableRight="@drawable/ic_arrow"
                    android:drawableTint="@color/greyText"
                    />

            </LinearLayout>

            <EditText
                android:id="@+id/barang_addNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:paddingLeft="12dp"
                android:layout_marginRight="8dp"
                android:textSize="12sp"
                android:hint="@string/food_addNotes"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/material_blue_grey_50">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="8dp"
                    android:text="@string/food_payment"
                    android:textColor="@color/greyText"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/material_blue_grey_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/food_cost"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/ic_mfood_cost" />

                <TextView
                    android:id="@+id/barang_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:padding="5dp"
                    android:layout_marginRight="15dp"
                    android:text="Rp. 23,400"
                    android:textSize="16sp"
                    android:textColor="@color/material_blue_grey_700" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/food_delivery"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/ic_mfood_cost" />

                <TextView
                    android:id="@+id/delivery_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:padding="5dp"
                    android:layout_marginRight="15dp"
                    android:text="Rp. 23,400"
                    android:textSize="16sp"
                    android:textColor="@color/material_blue_grey_700" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/blueSoft" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:paddingLeft="35dp"
                    android:text="@string/food_total"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/value_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:padding="5dp"
                    android:layout_marginRight="15dp"
                    android:text="Rp. 23,400"
                    android:textSize="16sp"
                    android:textColor="@color/material_blue_grey_700" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:weightSum="1"
                android:background="@color/colorPrimarySoft"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/food_cash"
                    android:textSize="16sp"
                    android:textColor="@color/material_light_white"
                    android:drawableLeft="@drawable/ic_mfood_cost" />

                <TextView
                    android:id="@+id/barang_cash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:padding="5dp"
                    android:layout_marginRight="15dp"
                    android:text="Rp. 23,400"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/material_light_white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/material_blue_grey_50">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="8dp"
                    android:text="@string/food_pay"
                    android:textColor="@color/greyText"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/material_blue_grey_200" />

            <RelativeLayout
                android:id="@+id/barang_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/service_order"
                android:paddingLeft="8dp"
                android:background="@color/material_light_white"
                android:clickable="true">

                <RadioGroup
                    android:id="@+id/service_paymentgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_mpay"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/text_mPay"
                        android:textColor="@color/biruText"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:theme="@style/PaymentButton" />


                    <RadioButton
                        android:id="@+id/radio_cash"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/text_cash"
                        android:textColor="@color/biruText"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:theme="@style/PaymentButton"
                        android:checked="false" />

                </RadioGroup>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/mpay_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="108dp"
                        android:text="@string/text_updating"
                        android:textColor="@color/material_blue_grey_700"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/mpay_topup"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        android:text="@string/text_topUp"
                        android:textColor="@color/material_blue_grey_700" />

                    <TextView
                        android:id="@+id/mpay_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/mpay_balance"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:text="@string/ride_discount"
                        android:textColor="@color/material_blue_grey_700"
                        android:textSize="12sp" />

                </RelativeLayout>

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/orange"
        android:text="@string/text_order"
        android:textSize="18sp"
        android:textColor="@color/greyText"
        android:clickable="false" />

</RelativeLayout>
