<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nearme_laundry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context="io.sezon.sezon.mLaundry.NearmeLaundryActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:adjustViewBounds="true"
            android:background="@color/orange"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_arrow_back_grey" />

        <TextView
            android:id="@+id/mLaundry_title"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/home_mLaundry"
            android:textAllCaps="true"
            android:textColor="@color/greyText"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/laundry_search"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:background="@drawable/bg_cari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:padding="7dp"
            android:text="@string/food_search"
            android:layout_marginRight="10dp"
            android:drawableRight="@drawable/ic_action_search"
            android:textColor="@color/grey"
            android:textSize="16sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/nearme_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/nearme_noRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_noRecordFound"
            android:textSize="16sp"
            android:layout_gravity="center"/>

        <ProgressBar
            android:id="@+id/nearme_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</LinearLayout>
